Scrollbar fixes

--- a/src/app/modules/home/highlight-slider/highlight-slider.component.scss
+++ b/src/app/modules/home/highlight-slider/highlight-slider.component.scss
@@ -117,6 +117,7 @@
       }
 
       &::-webkit-scrollbar-track {
+        background-color: transparent;
       }
 
       &::-webkit-scrollbar-thumb {
